--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,10 @@ body{
 .logo{
   margin-left: -5px;
 }
+
+.fa fa-arrow-circle-down{
+    margin-left: -300px;
+}
 .carousel-caption{
         margin-top: -80px;
         font-weight: 2rem;
