--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ body{
 }
 
 i.fa-arrow-circle-down.fa{
-    margin-left: -400px}
+   display: none;}
 .carousel-caption{
         margin-top: -80px;
         font-weight: 2rem;
