--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ body{
   margin-left: -5px;
 }
 
-.panel-heading .fa .fa-arrow-circle-down {
+.fa {
    display: none;}
 .carousel-caption{
         margin-top: -80px;
