--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body{
 .fa-arrow-circle-down {
    display: none;}
    
-   .fa-arrow-circle-up {
+   .fa .fa-arrow-circle-up {
    display: none;}
 .carousel-caption{
         margin-top: -80px;
