--- a/css/style.css
+++ b/css/style.css
@@ -89,19 +89,11 @@ body{
 
 .fa-arrow-circle-down {
    display: none;}
-   
- #menu-toggle{
+  
+  .fa-arrow-circle-up {
    display: none;}
-   
-    #menu1-toggle{
-   display: none;}
-   
-   #menu2-toggle{
-   display: none;}
-   
-   #menu3-toggle{
-   display: none;}
-   
+    
+
 .carousel-caption{
         margin-top: -80px;
         font-weight: 2rem;
